adjust config